mds/cache: don't assume non-auth xlocks to be remote locks

A few places in the code assumed that non-auth xlocks
must be remote, which prevented a proper drop lock procedure
when those locks turned out to be locallocks.

Fixes: https://tracker.ceph.com/issues/65606
Signed-off-by: Leonid Usov <leonid.usov@ibm.com>